--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: Build
 
 on:
-  - push
-  - pull_request
+  push:
+    tags:
+      - v[0-9]+.*
 
 jobs:
   build:
@@ -37,3 +38,18 @@ jobs:
         with:
           name: dye-${{ matrix.os }}-${{ matrix.arch }}
           path: src\dye.exe
+      - name: Release
+        uses: taiki-e/create-gh-release-action@v1
+        with:
+          title: dye $tag
+          changelog: CHANGELOG.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload files
+        uses: alexellis/upload-assets@0.2.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          asset_paths: '["dye-*-*"]'
+          
+  
