--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,12 +38,15 @@ jobs:
         with:
           name: dye-${{ matrix.os }}-${{ matrix.arch }}
           path: src/dye
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r dye-${{ matrix.os }}-${{ matrix.arch }}.zip src/dye
       - name: Release
         uses: alexellis/upload-assets@0.2.2
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
-          asset_paths: '["dye-*-*"]'
+          asset_paths: '["dye-*-*.zip"]'
 
           
   
