--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,19 +26,11 @@ jobs:
         run: |
           nimble install -d -y
           nim c -d:release src/dye.nim
-      - uses: actions/upload-artifact@v2
-        if: ${{ matrix.os != 'windows' }}
-        with:
-          name: dye-${{ matrix.os }}-${{ matrix.arch }}
-          path: src/dye
-      - uses: actions/upload-artifact@v2
-        if: ${{ matrix.os == 'windows' }}
-        with:
-          name: dye-${{ matrix.os }}-${{ matrix.arch }}
-          path: src/dye
+          mkdir dye
+          cp src/dye dye
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r dye-${{ matrix.os }}-${{ matrix.arch }}.zip src/dye
+          args: zip -qq -r dye-${{ matrix.os }}-${{ matrix.arch }}.zip dye/dye
       - name: Release
         uses: alexellis/upload-assets@0.2.2
         env:
