--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,10 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-      - name: Install nim
-        uses: iffy/install-nim@v4.1.3
+      - uses: alaviss/setup-nim@0.1.1
+        with:
+          path: 'nim'
+          version: devel
       - name: Build
         run: |
           nimble install -d -y
