--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,13 +36,13 @@ jobs:
           nimble install -d -y
           nimble build
       - uses: thedoctor0/zip-release@main
-        if: ${{ matrix.os != 'windows' }}
+        if: ${{ matrix.os != 'windows-latest' }}
         with:
           type: 'zip'
           filename: dye-${{ matrix.osname }}-${{ matrix.arch }}.zip
           path: dye
       - uses: thedoctor0/zip-release@main
-        if: ${{ matrix.os == 'windows' }}
+        if: ${{ matrix.os == 'windows-latest' }}
         with:
           type: 'zip'
           filename: dye-${{ matrix.osname }}-${{ matrix.arch }}.zip
