--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,18 +30,24 @@ jobs:
       - name: Build
         run: |
           nimble install -d -y
-          nimble build
+          nimble build -d:release
       - uses: thedoctor0/zip-release@main
-        if: ${{ matrix.os != 'windows-latest' }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         with:
           type: 'zip'
-          filename: dye-${{ matrix.os }}-${{ matrix.arch }}.zip
+          filename: dye-linux-${{ matrix.arch }}.zip
+          path: dye
+      - uses: thedoctor0/zip-release@main
+        if: ${{ matrix.os == 'macOS-latest' }}
+        with:
+          type: 'zip'
+          filename: dye-darwin-${{ matrix.arch }}.zip
           path: dye
       - uses: thedoctor0/zip-release@main
         if: ${{ matrix.os == 'windows-latest' }}
         with:
           type: 'zip'
-          filename: dye-${{ matrix.os }}-${{ matrix.arch }}.zip
+          filename: dye-windows-${{ matrix.arch }}.zip
           path: dye.exe
 
       - name: Release
