--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         run: |
           nimble install -d -y
-          nimble build -d:release
+          nimble build -d:release -d:ssl
       - uses: thedoctor0/zip-release@main
         if: ${{ matrix.os == 'ubuntu-latest' }}
         with:
