--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,14 @@ jobs:
         run: |
           dart pub get
           dart compile exe bin/dye.dart
+          mkdir dist
+          cp bin/dye.exe dist/dye.exe
       - name: Archive Release
         uses: thedoctor0/zip-release@main
         with:
           type: 'zip'
           filename: dye-${{ matrix.os }}.zip
-          path: 'bin'
+          path: 'dist'
       - uses: actions/upload-artifact@v2
         if: ${{ matrix.os != 'windows-latest' }}
         with:
