--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,9 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-      - uses: alaviss/setup-nim@0.1.1
+      - uses: iffy/install-nim@v4
         with:
-          path: 'nim'
-          version: stable
+          version: binary:stable
       - name: Build
         run: |
           nimble install -d -y
