--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
+          #- windows-latest
     permissions:
       contents: write
       checks: write
